Vertex Weight Proximity breaks Rigid Body simulation #52873

Closed
opened 2017-09-22 13:26:55 +02:00 by Serge Lyatin · 12 comments

System Information
Win7 64bit

Blender Version
Broken: 2.79

Short description of error
Motion created from modifying vgroup doesn't work with Rigid Body Simulation.
For comparison disable Vertex Weight Proximity and first Displace, but enable second Displace (with animation keyframes). It is working and I was expecting something similiar to the first case.

Exact steps for others to reproduce the error
Hit play button and nothing works.
Vweight_rigid.blend

**System Information** Win7 64bit **Blender Version** Broken: 2.79 **Short description of error** Motion created from modifying vgroup doesn't work with Rigid Body Simulation. For comparison disable Vertex Weight Proximity and first Displace, but enable second Displace (with animation keyframes). It is working and I was expecting something similiar to the first case. **Exact steps for others to reproduce the error** Hit play button and nothing works. [Vweight_rigid.blend](https://archive.blender.org/developer/F853053/Vweight_rigid.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL
Author

Well it seems Vertex Weight Proximity is not the problem, another modifiers like Subsurf or Triangulation placed before second Displace also break simulation

Well it seems Vertex Weight Proximity is not the problem, another modifiers like Subsurf or Triangulation placed before second Displace also break simulation
Member

Added subscribers: @Sergey, @LazyDodo

Added subscribers: @Sergey, @LazyDodo
Sergey Sharybin was assigned by Ray molenkamp 2017-09-28 19:46:21 +02:00
Member

Can confirm the behavior, unable to say if this expected behavior though. @Sergey ?

Can confirm the behavior, unable to say if this expected behavior though. @Sergey ?
Sergey Sharybin removed their assignment 2019-03-20 16:42:00 +01:00
Bastien Montagne was assigned by Sergey Sharybin 2019-03-20 16:42:00 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

The issue in code i saw was related on a fake dependency cycle, which is now fixed in 099a410478.
Now i can open the file and there is a playback going on.

Not sure what is the intent of using empty as a source for modifier, it has no geometry component. This is something best for @mont29 to verify. Other than that don't think i can reproduce an error.

So if there is still an issue, probably better to submit a new report with new file and exact description what's expected and what's happening.

@mont29, If the modifier is intended to be used with Empties as well, probably best to put DEG_OB_COMP_GEOMETRY dependencies under condition? if it's not, there seems to be a way o filter Mesh objects only.

The issue in code i saw was related on a fake dependency cycle, which is now fixed in 099a410478. Now i can open the file and there is a playback going on. Not sure what is the intent of using empty as a source for modifier, it has no geometry component. This is something best for @mont29 to verify. Other than that don't think i can reproduce an error. So if there is still an issue, probably better to submit a new report with new file and exact description what's expected and what's happening. @mont29, If the modifier is intended to be used with Empties as well, probably best to put `DEG_OB_COMP_GEOMETRY` dependencies under condition? if it's not, there seems to be a way o filter Mesh objects only.

Using an empty (or center point of any object) is a valid usecase of this modifier, will check on those relations tagging.

Using an empty (or center point of any object) is a valid usecase of this modifier, will check on those relations tagging.

Deg warning about DEG_OB_COMP_GEOMETRY relation is now fixed, but the rigid body simulation remains completely broken in 2.8 currently here (neither of the two displace modifiers work, only really moving red object works currently).

Deg warning about `DEG_OB_COMP_GEOMETRY` relation is now fixed, but the rigid body simulation remains completely broken in 2.8 currently here (neither of the two displace modifiers work, only really moving red object works currently).

But same happens in 2.7?
This sounds like a feedback loop between rigid body simulation which needs geometry for the collisions, but geometry needs transform for modifier stack. While we can avoid some dependency cycles here, the order of updates might be wrong from users perspective. And the only user-controllable solution here would be to go node based.

But same happens in 2.7? This sounds like a feedback loop between rigid body simulation which needs geometry for the collisions, but geometry needs transform for modifier stack. While we can avoid some dependency cycles here, the order of updates might be wrong from users perspective. And the only user-controllable solution here would be to go node based.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Yes, this is indeed a chicken & egg issue (and yes, it also happens in 2.7x). Guess we can close that as known limitation for now, then.

Yes, this is indeed a chicken & egg issue (and yes, it also happens in 2.7x). Guess we can close that as known limitation for now, then.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52873
No description provided.