Fix DEG warning from T52873: Proximity WeightVG modifier can use empty as target too.

Only create DEG_OB_COMP_GEOMETRY relation to target object when it has
some, and we use it.